# lhapdf_management

./: .gitignore  CITATION.cff  pyproject.toml  readme.md  setup.py  test_itall.py
.github/workflows/: lhapdf_test.yml  pythonpublish.yml  test_all_pdfs.yml
regression_testing/: test_install.py  test_list.py  test_show.py  test_update.py
src/lhapdf_management/: __init__.py  configuration.py  management.py  net_utilities.py  pdfsets.py
src/lhapdf_management/scripts/: lhapdf_script.py
tests/: test_itall.py
tests/lhapdf_testing/: conftest.py  test_install.py  test_library.py  test_list.py  test_show.py  test_update.py
tests/regression_testing/: test_install.py  test_list.py  test_show.py  test_update.py
