[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "lhapdf_management"
description="python-only lhapdf management"
readme = "readme.md"
requires-python = ">=3.6"
authors = [
{ name = "Juan Cruz-Martinez", email = "juacrumar@lairen.eu" },]
dependencies = [
    "pyyaml",
    "numpy",
]
urls = {repository = "https://github.com/scarlehoff/lhapdf_management"}
license = {text = "GPLv3"}
classifiers = [
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics"
]
dynamic =["version"]

[project.optional-dependencies]
fancy = ["tqdm"]
tests = ["pytest"]

[project.scripts]
lhapdf-management = "lhapdf_management.scripts.lhapdf_script:main"

[tool.setuptools.dynamic]
version = {attr = "lhapdf_management.__version__"}

[tool.black]
line-length = 100

[tool.isort]
atomic = true
line_length = 100
profile = "black"
skip_gitignore = true
force_sort_within_sections = true
